fix vertical align

--- a/wp-content/themes/zenzero-aa/style.css
+++ b/wp-content/themes/zenzero-aa/style.css
@@ -20,6 +20,10 @@ Domain Path: /languages
     float: none;
 }
 
+.menu-toggle i {
+    margin-top: 5px;
+}
+
 @media screen and (max-width: 767px) {
 
     .site-content {
